--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -10,8 +10,8 @@
 
     <title>{% block title%} {% endblock title %}</title>
     {% block link_css %}{% endblock link_css %}
-     <style>
-       {% block css %} {% endblock %}
+    <style>
+      {% block css %} {% endblock %}
   </style>
   </head>
   <body>
@@ -43,6 +43,10 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">cart( <span id ="cart"></span>)</a>
+
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
