--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -13,7 +13,7 @@
           .col-md-3 img{
 
           width: 227px;
-          max-height: 242px;
+          height: 242px;
           }
 
           body .carousel-indicator li{
@@ -33,12 +33,13 @@
           .carousel-control-next{
           top: auto;
           bottom: auto;
+          padding-top:222px
           }
-          body .no-padding{
-          padding-left: 0,
-          padding-right: 0;
-          }
-{% endblock %}
+           body .no-padding{
+           padding-left: 0,
+           padding-right: 0;
+           }
+ {% endblock %}
 
 {% block body %}
 {% load static %}
@@ -46,12 +47,13 @@
 
     <!--Slideshow starts here -->
     {% for product, range, nSlides in allProds %}
-    <h1 class="my-4">{{product.0.category}}</h1>
-<div id="demo{{forloop.counter}}" class="carousel slide my-3" data-ride="carousel">
+    <h5 class="my-4">Flash Sale On {{product.0.category}} - Recommended Items</h5>
+    <div class="row">
+    <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
 
-      {% for i in range %}
+       {% for i in range %}
       <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}" ></li>
       {% endfor %}
     </ul>
@@ -60,74 +62,67 @@
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
-        <div class="col-xs-3 col-sm-3 col-md-3">
-          <div class="card" style="width: 18rem;">
-            <img src='/media/{{product.0.image}}' class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{product.0.product_name}}</h5>
-                <p class="card-text">{{product.0.desc}}</p>
-                <button id="{{product.0.desc}}"  class="btn btn- primary cart ">Add to cart</button>
-            </div>
-          </div>
-        </div>
 
 
-        {% for i in product|slice:"1:"%}
+        {% for i in product %}
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
             <img src='/media/{{i.image}}' class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{i.product_name}}</h5>
               <p class="card-text">{{i.desc}}</p>
-              <button {{i.id}}  class="btn btn- primary cart">Add To cart</button>
+              <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
             </div>
           </div>
         </div>
-        {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
-      </div><div class="carousel-item">
+        {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
+      </div class="carousel-item">
         {% endif %}
-
+      
         {% endfor %}
     </div>
+
+
 
 </div>
 </div>
     <!-- left and right controls for the slide -->
-    <button class="carousel-control-prev" ="#demo{{forloop.counter}}" data-slide="prev">
+    <a class="carousel-control-prev" href="#demo{{forloop.counter}}" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" ="#demo{{forloop.counter}}" data-slide="next">
+    </a>
+    <a class="carousel-control-next" href="#demo{{forloop.counter}}" data-slide="next">
         <span class="carousel-control-next-icon"></span>
-    </button>
+    </a>
+  </div>
     {% endfor %}
 </div>
-{% endblock %}
+ {% endblock %}
 
 {% block JS %}
 <script>
-  console.log('let go');
-  if (localStorage.getItem('cart')==null){
-    var cart ={};
-  }
-  else
-  {cart=JSON.parse(localStorage.getItem('cart'))
+console.log('working');
+if(localStorage.getItem('cart') == null){
+var cart = {};
+}
+else
+{
+cart = JSON.parse(localStorage.getItem('cart'));
+document.getElementById('cart').innerHTML = Object.keys(cart).length;
 }
 $('.cart').click(function(){
-  console.log('clicked');
-  var idstr = this.is.toString();
-  console.log(idstr);
-
-  if(cart[idstr] !== 'undfined'){
-    cart[idstr]=cart[idstr]+1;
-  }
-  else
-  {
-    cart[idstr]=1;
-
-  }
-  console.log(cart);
-  localStorage.getItem('cart',JSON.stringify(cart));
-})
+console.log('clicked');
+var idstr = this.id.toString();
+console.log(idstr);
+if (cart[idstr] !=undefined){
+cart[idstr] = cart[idstr] + 1;
+}
+else
+{
+cart[idstr] = 1;
+}
+console.log(cart);
+localStorage.setItem('cart', JSON.stringify(cart));
+document.getElementById('cart').innerHTML = Object.keys(cart).length;
+});
 </script>
-  
-{% endblock  %}
+{% endblock %}
